# froxscript

./: .gitignore  Cargo.toml  README.md  manual.md  package-lock.json  package.json
dll/: index.d.ts  index.node
src/: lib.rs  rog.pest  rog.rs
src/rog/: dice.rs  rogcons.rs
