[package]
name = "froxcript"
version = "1.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2.10.6"
napi-derive = "2.9.4"
pest = "2.5.2"
pest_derive = "2.5.2"
rand = "0.8.5"

[build-dependencies]
napi-build = "2.0.1"
